setup in frontend

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,7 @@
 # API Configuration
-VITE_API_URL=https://busy-fool-backend.vercel.app
+# VITE_API_URL=http://localhost:3000
+REACT_APP_API_URL=http://localhost:3000
+
 
 # Add other environment variables as needed
 # VITE_APP_NAME=Busy Fool Coffee
